@@ -3,7 +3,7 @@ package uk.gov.hmcts.reform.finrem.caseorchestration.helper;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import com.fasterxml.jackson.databind.type.TypeFactory;
 import com.fasterxml.jackson.datatype.jsr310.JavaTimeModule;
-import uk.gov.hmcts.reform.finrem.caseorchestration.model.CaseDocumentData;
+import uk.gov.hmcts.reform.finrem.caseorchestration.model.CaseDocumentTabData;
 
 import java.time.LocalDateTime;
 import java.util.ArrayList;
@@ -12,9 +12,8 @@ import java.util.List;
 import java.util.Map;
 import java.util.Optional;
 import java.util.function.BiPredicate;
-import java.util.stream.Collectors;
 
-public abstract class DocumentDateHelper<T extends CaseDocumentData> {
+public abstract class DocumentDateHelper<T extends CaseDocumentTabData> {
 
     protected final ObjectMapper mapper;
     private final Class<T> documentType;
@@ -31,29 +30,28 @@ public abstract class DocumentDateHelper<T extends CaseDocumentData> {
     public Map<String, Object> addUploadDateToNewDocuments(Map<String, Object> caseData,
                                                            Map<String, Object> caseDataBefore,
                                                            String documentCollection) {
-        List<T> allDocuments = Optional.ofNullable(getDocumentCollection(caseData, documentCollection))
-            .orElse(Collections.emptyList());
-
-        List<T> oldDocuments = Optional.ofNullable(getDocumentCollection(caseDataBefore, documentCollection))
-            .orElse(Collections.emptyList());
+        List<T> allDocuments = getDocumentCollection(caseData, documentCollection);
+        List<T> documentsBeforeEvent = getDocumentCollection(caseDataBefore, documentCollection);
 
         List<T> modifiedDocuments = allDocuments.stream()
-            .peek(document -> addDateToNewDocuments(oldDocuments, document))
-            .collect(Collectors.toList());
+            .peek(document -> addDateToNewDocuments(documentsBeforeEvent, document))
+            .toList();
 
         caseData.put(documentCollection, modifiedDocuments);
         return caseData;
     }
 
-    protected void addDateToNewDocuments(List<T> documentsBeforeEvent, T document) {
+    private void addDateToNewDocuments(List<T> documentsBeforeEvent, T document) {
         if (isNewDocument.test(document.getElementId(), documentsBeforeEvent)) {
             document.setUploadDateTime(LocalDateTime.now());
         }
     }
 
-    protected List<T> getDocumentCollection(Map<String, Object> caseData,
+    private List<T> getDocumentCollection(Map<String, Object> caseData,
                                             String documentCollection) {
-        return mapper.convertValue(caseData.get(documentCollection),
+        List<T> documentList = mapper.convertValue(caseData.get(documentCollection),
             TypeFactory.defaultInstance().constructCollectionType(ArrayList.class, documentType));
+
+        return Optional.ofNullable(documentList).orElse(Collections.emptyList());
     }
 }
